--- a/sass/_illustration.scss
+++ b/sass/_illustration.scss
@@ -707,6 +707,7 @@ img{
 .polaroid14 {
     background: #fff;
     padding: 1rem 1rem 1rem 1rem; 
+    border-radius: 10px 10px;
 &:hover{
     > .caption14 {
         font-size: 1.2rem;
