--- a/css/index.css
+++ b/css/index.css
@@ -94,10 +94,11 @@ html, body {
   margin-top: 50%;
   border-radius: 10px 10px; }
   .polaroid1:hover > .caption1 {
-    font-size: 1.2rem;
+    font-size: 1.6rem;
     text-align: center;
     line-height: 2em;
     color: black;
+    font-weight: 800;
     display: block;
     padding-bottom: 2rem; }
   .polaroid1 img {
@@ -109,24 +110,25 @@ html, body {
 .item1 {
   width: 20%;
   display: inline-block;
-  margin-top: 6rem;
+  margin-top: 3rem;
   -webkit-transition: opacity 0.5s ease-out;
   -moz-transition: opacity 0.5s ease-out;
   -o-transition: opacity 0.5s ease-out;
   transition: margin 0.5s ease-out; }
   .item1:hover {
-    margin-top: 5%; }
+    margin-top: 1%; }
 
 .polaroid2 {
   background: #fff;
   padding: 1rem 1rem 1rem 1rem;
   border-radius: 10px 10px; }
   .polaroid2:hover > .caption2 {
-    font-size: 1.2rem;
+    font-size: 1.6rem;
     text-align: center;
     line-height: 2em;
     color: black;
     display: block;
+    font-weight: 800;
     padding-bottom: 2rem; }
   .polaroid2 img {
     max-width: 100%; }
@@ -136,22 +138,23 @@ html, body {
 .item2 {
   width: 20%;
   display: inline-block;
-  margin-top: 15rem;
+  margin-top: 12rem;
   -webkit-transition: opacity 0.5s ease-out;
   -moz-transition: opacity 0.5s ease-out;
   -o-transition: opacity 0.5s ease-out;
   transition: margin 0.5s ease-out; }
   .item2:hover {
-    margin-top: 15%; }
+    margin-top: 10%; }
 
 .polaroid3 {
   background: #fff;
   padding: 1rem 1rem 1rem 1rem;
   border-radius: 10px 10px; }
   .polaroid3:hover > .caption3 {
-    font-size: 1.2rem;
+    font-size: 1.6rem;
     text-align: center;
     line-height: 2em;
+    font-weight: 800;
     color: black;
     display: block;
     padding-bottom: 2rem; }
@@ -163,22 +166,23 @@ html, body {
 .item3 {
   width: 20%;
   display: inline-block;
-  margin-top: 15rem;
+  margin-top: 12rem;
   -webkit-transition: opacity 0.5s ease-out;
   -moz-transition: opacity 0.5s ease-out;
   -o-transition: opacity 0.5s ease-out;
   transition: margin 0.5s ease-out; }
   .item3:hover {
-    margin-top: 15%; }
+    margin-top: 10%; }
 
 .polaroid4 {
   background: #fff;
   padding: 1rem 1rem 1rem 1rem;
   border-radius: 10px 10px; }
   .polaroid4:hover > .caption4 {
-    font-size: 1.2rem;
+    font-size: 1.6rem;
     text-align: center;
     line-height: 2em;
+    font-weight: 800;
     color: black;
     display: block;
     padding-bottom: 2rem; }
@@ -190,13 +194,13 @@ html, body {
 .item4 {
   width: 20%;
   display: inline-block;
-  margin-top: 15rem;
+  margin-top: 12rem;
   -webkit-transition: opacity 0.5s ease-out;
   -moz-transition: opacity 0.5s ease-out;
   -o-transition: opacity 0.5s ease-out;
   transition: margin 0.5s ease-out; }
   .item4:hover {
-    margin-top: 15%; }
+    margin-top: 10%; }
 
 .paris {
   background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url("../images/paris-big.jpg");
@@ -222,9 +226,10 @@ html, body {
   margin-top: 50%;
   border-radius: 10px 10px; }
   .polaroid5:hover > .caption5 {
-    font-size: 1.2rem;
+    font-size: 1.6rem;
     text-align: center;
     line-height: 2em;
+    font-weight: 800;
     color: black;
     display: block;
     padding-bottom: 2rem; }
@@ -237,20 +242,20 @@ html, body {
 .item5 {
   width: 20%;
   display: inline-block;
-  margin-top: 2rem;
   -webkit-transition: opacity 0.5s ease-out;
   -moz-transition: opacity 0.5s ease-out;
   -o-transition: opacity 0.5s ease-out;
   transition: margin 0.5s ease-out; }
   .item5:hover {
-    margin-top: 0%; }
+    margin-top: -5%; }
 
 .polaroid6 {
   background: #fff;
   padding: 1rem 1rem 1rem 1rem;
   border-radius: 10px 10px; }
   .polaroid6:hover > .caption6 {
-    font-size: 1.2rem;
+    font-size: 1.6rem;
+    font-weight: 800;
     text-align: center;
     line-height: 2em;
     color: black;
@@ -265,23 +270,24 @@ html, body {
 .item6 {
   width: 20%;
   display: inline-block;
-  margin-top: 15rem;
+  margin-top: 9rem;
   border-radius: 10px 10px;
   -webkit-transition: opacity 0.5s ease-out;
   -moz-transition: opacity 0.5s ease-out;
   -o-transition: opacity 0.5s ease-out;
   transition: margin 0.5s ease-out; }
   .item6:hover {
-    margin-top: 15%; }
+    margin-top: 5%; }
 
 .polaroid7 {
   background: #fff;
   padding: 1rem 1rem 1rem 1rem;
   border-radius: 10px 10px; }
   .polaroid7:hover > .caption7 {
-    font-size: 1.2rem;
+    font-size: 1.6rem;
     text-align: center;
     line-height: 2em;
+    font-weight: 800;
     color: black;
     display: block;
     padding-bottom: 2rem; }
@@ -294,22 +300,23 @@ html, body {
 .item7 {
   width: 20%;
   display: inline-block;
-  margin-top: 15rem;
+  margin-top: 9rem;
   -webkit-transition: opacity 0.5s ease-out;
   -moz-transition: opacity 0.5s ease-out;
   -o-transition: opacity 0.5s ease-out;
   transition: margin 0.5s ease-out; }
   .item7:hover {
-    margin-top: 15%; }
+    margin-top: 5%; }
 
 .polaroid8 {
   background: #fff;
   padding: 1rem 1rem 1rem 1rem;
   border-radius: 10px 10px; }
   .polaroid8:hover > .caption8 {
-    font-size: 1.2rem;
+    font-size: 1.6rem;
     text-align: center;
     line-height: 2em;
+    font-weight: 800;
     color: black;
     display: block;
     padding-bottom: 2rem; }
@@ -322,13 +329,13 @@ html, body {
 .item8 {
   width: 20%;
   display: inline-block;
-  margin-top: 15rem;
+  margin-top: 9rem;
   -webkit-transition: opacity 0.5s ease-out;
   -moz-transition: opacity 0.5s ease-out;
   -o-transition: opacity 0.5s ease-out;
   transition: margin 0.5s ease-out; }
   .item8:hover {
-    margin-top: 15%; }
+    margin-top: 5%; }
 
 .japan {
   background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url("../images/japan.jpg");
@@ -354,10 +361,11 @@ html, body {
   margin-top: 70%;
   border-radius: 10px 10px; }
   .polaroid9:hover > .caption9 {
-    font-size: 1.2rem;
+    font-size: 1.6rem;
     text-align: center;
     line-height: 2em;
     color: black;
+    font-weight: 800;
     display: block;
     padding-bottom: 2rem; }
   .polaroid9 img {
@@ -369,22 +377,22 @@ html, body {
 .item9 {
   width: 20%;
   display: inline-block;
-  margin-top: 2rem;
   -webkit-transition: opacity 0.5s ease-out;
   -moz-transition: opacity 0.5s ease-out;
   -o-transition: opacity 0.5s ease-out;
   transition: margin 0.5s ease-out; }
   .item9:hover {
-    margin-top: 0%; }
+    margin-top: -5%; }
 
 .polaroid10 {
   background: #fff;
   padding: 1rem 1rem 1rem 1rem;
   border-radius: 10px 10px; }
   .polaroid10:hover > .caption10 {
-    font-size: 1.2rem;
+    font-size: 1.6rem;
     text-align: center;
     line-height: 2em;
+    font-weight: 800;
     color: black;
     display: block;
     padding-bottom: 2rem; }
@@ -397,25 +405,24 @@ html, body {
 .item10 {
   width: 20%;
   display: inline-block;
-  margin-top: 15rem;
+  margin-top: 12.5rem;
   border-radius: 10px 10px;
   -webkit-transition: opacity 0.5s ease-out;
   -moz-transition: opacity 0.5s ease-out;
   -o-transition: opacity 0.5s ease-out;
-  transition: margin 0.5s ease-out;
-  overflow: hidden;
-  background-position: top; }
+  transition: margin 0.5s ease-out; }
   .item10:hover {
-    margin-top: 15%; }
+    margin-top: 9%; }
 
 .polaroid11 {
   background: #fff;
   padding: 1rem 1rem 1rem 1rem;
   border-radius: 10px 10px; }
   .polaroid11:hover > .caption11 {
-    font-size: 1.2rem;
+    font-size: 1.6rem;
     text-align: center;
     line-height: 2em;
+    font-weight: 800;
     color: black;
     display: block;
     padding-bottom: 2rem; }
@@ -428,23 +435,24 @@ html, body {
 .item11 {
   width: 20%;
   display: inline-block;
-  margin-top: 15rem;
+  margin-top: 12.5rem;
   -webkit-transition: opacity 0.5s ease-out;
   -moz-transition: opacity 0.5s ease-out;
   -o-transition: opacity 0.5s ease-out;
   transition: margin 0.5s ease-out; }
   .item11:hover {
-    margin-top: 15%; }
+    margin-top: 9%; }
 
 .polaroid12 {
   background: #fff;
   padding: 1rem 1rem 1rem 1rem;
   border-radius: 10px 10px; }
   .polaroid12:hover > .caption12 {
-    font-size: 1.2rem;
+    font-size: 1.6rem;
     text-align: center;
     line-height: 2em;
     color: black;
+    font-weight: 800;
     display: block;
     padding-bottom: 2rem; }
   .polaroid12 img {
@@ -456,15 +464,13 @@ html, body {
 .item12 {
   width: 20%;
   display: inline-block;
-  margin-top: 15rem;
+  margin-top: 12.5rem;
   -webkit-transition: opacity 0.5s ease-out;
   -moz-transition: opacity 0.5s ease-out;
   -o-transition: opacity 0.5s ease-out;
-  transition: margin 0.5s ease-out;
-  overflow: hidden;
-  background-position: top; }
+  transition: margin 0.5s ease-out; }
   .item12:hover {
-    margin-top: 15%; }
+    margin-top: 9%; }
 
 .australia {
   background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url("../images/koala.jpg");
@@ -490,11 +496,12 @@ html, body {
   margin-top: 70%;
   border-radius: 10px 10px; }
   .polaroid13:hover > .caption13 {
-    font-size: 1.2rem;
+    font-size: 1.6rem;
     text-align: center;
     line-height: 2em;
     color: black;
     display: block;
+    font-weight: 800;
     padding-bottom: 2rem; }
   .polaroid13 img {
     max-width: 100%;
@@ -505,23 +512,23 @@ html, body {
 .item13 {
   width: 20%;
   display: inline-block;
-  margin-top: 2rem;
   -webkit-transition: opacity 0.5s ease-out;
   -moz-transition: opacity 0.5s ease-out;
   -o-transition: opacity 0.5s ease-out;
   transition: margin 0.5s ease-out; }
   .item13:hover {
-    margin-top: 0%; }
+    margin-top: -5%; }
 
 .polaroid14 {
   background: #fff;
   padding: 1rem 1rem 1rem 1rem;
   border-radius: 10px 10px; }
   .polaroid14:hover > .caption14 {
-    font-size: 1.2rem;
+    font-size: 1.6rem;
     text-align: center;
     line-height: 2em;
     color: black;
+    font-weight: 800;
     display: block;
     padding-bottom: 2rem; }
   .polaroid14 img {
@@ -533,28 +540,28 @@ html, body {
 .item14 {
   width: 20%;
   display: inline-block;
-  margin-top: 15rem;
+  margin-top: 12.5rem;
   border-radius: 10px 10px;
   -webkit-transition: opacity 0.5s ease-out;
   -moz-transition: opacity 0.5s ease-out;
   -o-transition: opacity 0.5s ease-out;
-  transition: margin 0.5s ease-out;
-  overflow: hidden;
-  background-position: top; }
+  transition: margin 0.5s ease-out; }
   .item14:hover {
-    margin-top: 15%; }
+    margin-top: 9%; }
 
 .polaroid15 {
   background: #fff;
   padding: 1rem 1rem 1rem 1rem;
   border-radius: 10px 10px; }
   .polaroid15:hover > .caption15 {
-    font-size: 1.2rem;
+    font-size: 1.6rem;
     text-align: center;
     line-height: 2em;
     color: black;
     display: block;
-    padding-bottom: 2rem; }
+    line-height: 1.2;
+    padding-bottom: 2rem;
+    font-weight: 800; }
   .polaroid15 img {
     max-width: 100%;
     object-fit: cover; }
@@ -564,23 +571,24 @@ html, body {
 .item15 {
   width: 20%;
   display: inline-block;
-  margin-top: 15rem;
+  margin-top: 12.5rem;
   -webkit-transition: opacity 0.5s ease-out;
   -moz-transition: opacity 0.5s ease-out;
   -o-transition: opacity 0.5s ease-out;
   transition: margin 0.5s ease-out; }
   .item15:hover {
-    margin-top: 15%; }
+    margin-top: 9%; }
 
 .polaroid16 {
   background: #fff;
   padding: 1rem 1rem 1rem 1rem;
   border-radius: 10px 10px; }
   .polaroid16:hover > .caption16 {
-    font-size: 1.2rem;
+    font-size: 1.6rem;
     text-align: center;
     line-height: 2em;
     color: black;
+    font-weight: 800;
     display: block;
     padding-bottom: 2rem; }
   .polaroid16 img {
@@ -592,15 +600,13 @@ html, body {
 .item16 {
   width: 20%;
   display: inline-block;
-  margin-top: 15rem;
+  margin-top: 12.5rem;
   -webkit-transition: opacity 0.5s ease-out;
   -moz-transition: opacity 0.5s ease-out;
   -o-transition: opacity 0.5s ease-out;
-  transition: margin 0.5s ease-out;
-  overflow: hidden;
-  background-position: top; }
+  transition: margin 0.5s ease-out; }
   .item16:hover {
-    margin-top: 15%; }
+    margin-top: 9%; }
 
 @media only screen and (max-width: 640px) {
   .text {
@@ -641,7 +647,7 @@ html, body {
     .item1:hover {
       margin-top: 5%; }
       .item1:hover > .polaroid1 > .caption1 {
-        font-size: 1.2rem;
+        font-size: 1.6rem;
         text-align: center;
         line-height: 2em;
         color: black;
@@ -675,7 +681,7 @@ html, body {
     .item2:hover {
       margin-top: 5%; }
       .item2:hover > .polaroid2 > .caption2 {
-        font-size: 1.2rem;
+        font-size: 1.6rem;
         text-align: center;
         line-height: 2em;
         color: black;
